Added documentation for tags
